Added Form Validation

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@vueuse/core": "^10.2.1",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
